--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <meta name="theme-color" content="#00bcd4">
 
   <style>
-    /* هذا هو الـ CSS الأساسي من ملفك القديم
-      ليضمن نفس الشكل الجمالي
+    /* *** START: FIXED DESIGN ***
+      This is your original custom CSS.
+      It has been added back to fix the "sloppy" design.
     */
     body {
       font-family: 'Inter', sans-serif;
@@ -352,3 +353,4 @@
 
 </body>
 </html>
+
