--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.json">
   
   <!-- Apple Touch Icon (for iOS "Add to Home Screen") -->
-  <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgGVNd8uPcpbKOagpnwi5e8ai6v82sMiSRdWD0ZEgqIayvesaHtPrec7QGQSx-TXtbWb9D5SdZrcXuHCIAvPbHRGqUQV7MKxR_VyjvTs37suGOlDaqS1RuVuN2EsMNm50GDCG_N-ugnwwutUb9OfyJbkGz9k06YvTi0ynwW9jJaBNhIsEkPJ5NOzExt3xzN/s192/10cb804e-ab18-4d8a-8ce0-600bbe8ab10d.png">
+  <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEje8bWFF9Q0CTqpUUiO6wGjb2mkDQjaMzNN2ZJk0lOA2U1ugmOjmaByg1SlmqIE4_xfjzoMFNeks1T5ZoWLdF_Pp5zuq_LEsei9XeaCRqhzubS26lquL6RB94j5G0kMcXfvG9Kh2uh2fT8FHJcNRwYhskEOjoe0afxlurQXqA_CqSNGAqdvOEcEsE86ileX/s1600/Screenshot%202025-11-09%20at%205.33.36%E2%80%AFPM.png">
   
   <!-- Theme Color for Safari -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -43,7 +43,7 @@
         <path d="M19 12H5"></path><path d="M12 19l-7-7 7-7"></path>
       </svg>
     </button>
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgGVNd8uPcpbKOagpnwi5e8ai6v82sMiSRdWD0ZEgqIayvesaHtPrec7QGQSx-TXtbWb9D5SdZrcXuHCIAvPbHRGqUQV7MKxR_VyjvTs37suGOlDaqS1RuVuN2EsMNm50GDCG_N-ugnwwutUb9OfyJbkGz9k06YvTi0ynwW9jJaBNhIsEkPJ5NOzExt3xzN/s192/10cb804e-ab18-4d8a-8ce0-600bbe8ab10d.png" 
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEje8bWFF9Q0CTqpUUiO6wGjb2mkDQjaMzNN2ZJk0lOA2U1ugmOjmaByg1SlmqIE4_xfjzoMFNeks1T5ZoWLdF_Pp5zuq_LEsei9XeaCRqhzubS26lquL6RB94j5G0kMcXfvG9Kh2uh2fT8FHJcNRwYhskEOjoe0afxlurQXqA_CqSNGAqdvOEcEsE86ileX/s1600/Screenshot%202025-11-09%20at%205.33.36%E2%80%AFPM.png" 
          alt="Logo" class="app-header-logo">
     <h1 id="app-title">CHG Toolkit</h1>
   </header>
