--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.json">
   
   <!-- Apple Touch Icon (for iOS "Add to Home Screen") -->
-  <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEje8bWFF9Q0CTqpUUiO6wGjb2mkDQjaMzNN2ZJk0lOA2U1ugmOjmaByg1SlmqIE4_xfjzoMFNeks1T5ZoWLdF_Pp5zuq_LEsei9XeaCRqhzubS26lquL6RB94j5G0kMcXfvG9Kh2uh2fT8FHJcNRwYhskEOjoe0afxlurQXqA_CqSNGAqdvOEcEsE86ileX/s1600/Screenshot%202025-11-09%20at%205.33.36%E2%80%AFPM.png">
+  <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFzwIoH5I9Dg_dwbN_Kc4B2KdJiTjIVJIc45xnOQ28R2dw75hGSE97vmQpYfXKO1r0qAceEw2kpp78Y_aTgD6YCZfpZiMC8bStPrEDYzOUSUV96h9kYYcS5PD_nAltwlYEL1umN-Z6KjXfyIaFEU-OP4-Ldo6r1V9ZZwfp3AG1YDJYGoOsgWKNcoT3igc4/s1600/bc19f2e5-04b9-441b-a4f4-ccf4fe8e8d31.png">
   
   <!-- Theme Color for Safari -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -43,7 +43,7 @@
         <path d="M19 12H5"></path><path d="M12 19l-7-7 7-7"></path>
       </svg>
     </button>
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEje8bWFF9Q0CTqpUUiO6wGjb2mkDQjaMzNN2ZJk0lOA2U1ugmOjmaByg1SlmqIE4_xfjzoMFNeks1T5ZoWLdF_Pp5zuq_LEsei9XeaCRqhzubS26lquL6RB94j5G0kMcXfvG9Kh2uh2fT8FHJcNRwYhskEOjoe0afxlurQXqA_CqSNGAqdvOEcEsE86ileX/s1600/Screenshot%202025-11-09%20at%205.33.36%E2%80%AFPM.png" 
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFzwIoH5I9Dg_dwbN_Kc4B2KdJiTjIVJIc45xnOQ28R2dw75hGSE97vmQpYfXKO1r0qAceEw2kpp78Y_aTgD6YCZfpZiMC8bStPrEDYzOUSUV96h9kYYcS5PD_nAltwlYEL1umN-Z6KjXfyIaFEU-OP4-Ldo6r1V9ZZwfp3AG1YDJYGoOsgWKNcoT3igc4/s1600/bc19f2e5-04b9-441b-a4f4-ccf4fe8e8d31.png" 
          alt="Logo" class="app-header-logo">
     <h1 id="app-title">CHG Toolkit</h1>
   </header>
