--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="CHG Toolkit">
-  <!-- Link to your icon file -->
-  <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFzwIoH5I9Dg_dwbN_Kc4B2KdJiTjIVJIc45xnOQ28R2dw75hGSE97vmQpYfXKO1r0qAceEw2kpp78Y_aTgD6YCZfpZiMC8bStPrEDYzOUSUV96h9kYYcS5PD_nAltwlYEL1umN-Z6KjXfyIaFEU-OP4-Ldo6r1V9ZZwfp3AG1YDJYGoOsgWKNcoT3igc4/s1600/bc19f2e5-04b9-441b-a4f4-ccf4fe8e8d31.png">
+  <!-- ** NEW: Updated Icon Link ** -->
+  <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFzwIoH5I9Dg_dwbN_Kc4B2KdJiTjIVJIc45xnOQ28R2dw75hGSE97vmQpYfXKO1r0qAceEw2kpp78Y_aTgD6YCZfpZiMC8bStPrEDYzOUSUV96h9kYYcS5PD_nAltwlYEL1umN-Z6KjXfyIaFEU-OP4-Ldo6r1V9ZZwfp3AG1YDJYGoOsgWKNcoT3igc4/s192/bc19f2e5-04b9-441b-a4f4-ccf4fe8e8d31.png">
 
   <!-- Supabase Client -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -32,7 +32,8 @@
     <button class="header-back-button" id="header-back-button" aria-label="Go back">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
     </button>
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFzwIoH5I9Dg_dwbN_Kc4B2KdJiTjIVJIc45xnOQ28R2dw75hGSE97vmQpYfXKO1r0qAceEw2kpp78Y_aTgD6YCZfpZiMC8bStPrEDYzOUSUV96h9kYYcS5PD_nAltwlYEL1umN-Z6KjXfyIaFEU-OP4-Ldo6r1V9ZZwfp3AG1YDJYGoOsgWKNcoT3igc4/s1600/bc19f2e5-04b9-441b-a4f4-ccf4fe8e8d31.png" alt="Logo" class="app-header-logo">
+    <!-- ** NEW: Updated Logo Image ** -->
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFzwIoH5I9Dg_dwbN_Kc4B2KdJiTjIVJIc45xnOQ28R2dw75hGSE97vmQpYfXKO1r0qAceEw2kpp78Y_aTgD6YCZfpZiMC8bStPrEDYzOUSUV96h9kYYcS5PD_nAltwlYEL1umN-Z6KjXfyIaFEU-OP4-Ldo6r1V9ZZwfp3AG1YDJYGoOsgWKNcoT3igc4/s192/bc19f2e5-04b9-441b-a4f4-ccf4fe8e8d31.png" alt="Logo" class="app-header-logo">
     <h1 id="app-title">CHG Toolkit</h1>
 
     <!-- ** NEW: Dark Mode Toggle Button ** -->
@@ -80,7 +81,7 @@
         </div>
         <!-- Renal Dosing -->
         <div class="tool-card" data-nav="renal">
-          <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10.9 2.1a2.4 2.4 0 0 1 2.2 0l1.8 1.1 2.4.4a2.4 2.4 0 0 1 1.7 2.3l-.3 2.5 1.5 1.9a2.4 2.4 0 0 1 0 2.2l-1.5 1.9.3 2.5a2.4 2.4 0 0 1-1.7 2.3l-2.4.4-1.8 1.1a2.4 2.4 0 0 1-2.2 0l-1.8-1.1-2.4-.4a2.4 2.4 0 0 1-1.7-2.3l.3-2.5-1.5-1.9a2.4 2.4 0 0 1 0-2.2l1.5-1.9-.3-2.5a2.4 2.4 0 0 1 1.7-2.3l2.4-.4 1.8-1.1zM12 11V8"></path><path d="M2 12h20"></path></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><path d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"></path><path d="M2 12h20"></path></svg>
           <span class="tool-card-title">Renal Dosing<br>(CrCl)</span>
         </div>
         <!-- Other Scores -->
@@ -324,7 +325,7 @@
             </select>
           </div>
         </form>
-        <p class="text-sm text-center text-gray-500">Result will appear below as you type.</p>
+        <p class="text-sm text-center text-gray-500 dark:text-gray-400">Result will appear below as you type.</p>
         <div id="renal-result-area" class="mt-4"></div>
       </div>
     </div>
@@ -335,7 +336,7 @@
     <div id="view-scores" class="view">
       <div class="calculator-view">
         <h2 class="calculator-title">Other Clinical Scores</h2>
-        <p class="text-center text-gray-600 mb-6">More calculators are coming soon.</p>
+        <p class="text-center text-gray-600 dark:text-gray-400 mb-6">More calculators are coming soon.</p>
         <!-- This can be a list of disabled buttons or links -->
       </div>
     </div>
@@ -372,7 +373,7 @@
           </div>
           <div class="input-group">
             <label for="converter-toValue">To Value:</label>
-            <input type="text" id="converter-toValue" name="toValue" disabled>
+            <input type="text" id="converter-toValue" name="toValue" disabled class="disabled-input">
           </div>
           <div class="input-group">
             <label for="converter-toUnit">To Unit:</label>
@@ -389,12 +390,12 @@
               </optgroup>
               <optgroup label="Weight (Specific)">
                 <option value="lbs_kg">Kilograms (kg)</option>
-                <option value="kg_lbs">Pounds (lbs)</option>
+                <option value="kg_lbs">Pounds (lbs)</toption>
               </optgroup>
             </select>
           </div>
         </form>
-        <p class="text-sm text-center text-gray-500">Result updates automatically.</p>
+        <p class="text-sm text-center text-gray-500 dark:text-gray-400">Result updates automatically.</p>
       </div>
     </div>
 
@@ -441,7 +442,7 @@
   <div id="password-prompt" class="hidden">
     <div id="password-modal">
       <h3 class="calculator-title">Access History</h3>
-      <p class="text-center text-gray-600 mb-6">Please enter the password to view logs.</p>
+      <p class="text-center text-gray-600 dark:text-gray-400 mb-6">Please enter the password to view logs.</p>
       <form id="password-form" class="space-y-4">
         <div class="input-group">
           <label for="password-input">Password:</label>
